--- a/src/components/CalculatorForm.module.css
+++ b/src/components/CalculatorForm.module.css
@@ -9,7 +9,7 @@
 .input {
   width: 35%;
   padding: 12px;
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
   border: none;
   border-radius: 4px;
   outline: none;
@@ -18,29 +18,24 @@
 .button {
   padding: 8px;
   background-color: #d9d9d900;
-  color: #FDAE28;
+  color: #fdae28;
   text-decoration: none;
-  border: 1px solid #FDAE28;
+  border: 1px solid #fdae28;
   border-radius: 4px;
-  width: 10%;
   cursor: pointer;
   transition-duration: 0.4s;
 }
 
 .button:hover {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 @media screen and (max-width: 768px) {
- 
- .input{
-  width: 60%;
- }
+  .input {
+    width: 60%;
+  }
 
- .button {
-  width: 40%;
- }
-  
-
+  .button {
+    width: 40%;
+  }
 }
-
