--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -11,7 +11,7 @@
   display:flex;
   flex-direction: column;
   justify-content: center;
-  background-image: url('./bannerLogin.svg');
+  background-image: url('./bannerLogin.jpeg');
   background-size: cover;
   width: 60%;
   min-height: 92vh;
