--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,10 @@
 }
 
 .appContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   margin: 0;
 }
